# hello

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
include/hello/: hello.h
src/: hello.cpp
test/: test_hello.cpp
